--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "dependencies": {
+    "@discordjs/opus": "github:discordjs/opus",
+    "@discordjs/voice": "^0.16.0",
     "config": "^3.3.9",
     "discord.js": "^14.9.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "ffmpeg-static": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "googleapis": "^114.0.0",
+    "opus": "^0.0.0"
   }
 }
